remove fade on active to prevent UI "jumping"

--- a/src/Umbraco.Web.UI.Client/src/less/components/umb-group-builder.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/umb-group-builder.less
@@ -18,7 +18,6 @@
 
 .umb-group-builder__group.-active {
   border-color: @blue;
-  animation: fadeIn 0.5s;
 }
 
 .umb-group-builder__group.-inherited {
